# afwf_awscli_profile-project

./: .coveragerc  .gitignore  README.rst  info.plist  main.py  pyproject.toml  release-history.rst  setup.py
afwf_awscli_profile/: boto_ses.py  cache.py  fuzzy.py  paths.py  settings.py  workflow.py
afwf_awscli_profile/handlers/: help.py  item.py  mfa_auth.py  run_mfa_auth.py  run_set_default_profile.py  s3_config.py  set_default_profile.py  view_or_edit_settings.py
afwf_awscli_profile/icons/: __init__.py
docs/: 03-Development-Guide.rst  05-Unit-Test-Guide.rst  06-Release-Guide.rst
tests/: test_cache.py  test_fuzzy.py  test_handler_memorize_cache.py  test_handlers_item.py  test_handlers_mfa_auth.py  test_handlers_set_default_profile.py  test_import.py  test_settings.py
tests/.aws/: config  credentials
