[tool.poetry]
name = "afwf_awscli_profile"
version = "0.1.2"
description = "A sample Alfred Workflow Python project"
authors = ["Sanhe Hu <husanhe@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
afwf = "0.4.1"
pathlib_mate = " 1.2.1"
awscli_mate = "0.3.2"
diskcache = "5.4.0"
fuzzywuzzy = "0.18.0"
boto3 = "^1.24.96"
botocore = "^1.27.96"


[tool.poetry.dev-dependencies]
# Don't put anything here, explicit is better than implicit


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
twine = "3.8.0"
wheel = "0.37.1"


[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "6.2.5"
pytest-cov = "2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
